fixed alignment of form elements in mobile

--- a/src/grids/sass/includes/_util-mobile.scss
+++ b/src/grids/sass/includes/_util-mobile.scss
@@ -15,11 +15,13 @@ form {
 	[class*=margin-], [class*=span-]{
 		margin: 0 !important;
 	}
-
 	&.background-light > * {
 		outline: none;
 		margin-left: 0;
 		margin-right: 0;
+	}
+	.align-right {
+		text-align: left !important;
 	}
 }
 
